Changed getFirst() to get(0) since it caused some issues when building